fix: Score 구조 변경, inquireRoundGradeBySubject(),inquireAverageGrade()